ui-ux: Fix the 'Current Form' message alignment

--- a/css/main.sass
+++ b/css/main.sass
@@ -39,3 +39,6 @@ main
     
     .controls
         display: flex
+        width: 100%
+        height: 5vh
+        align-items: center
